# HOG

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  build_documentation.sh  dev-requirements.txt  generate_all_hyteg_forms.py  generate_all_operators.py  pyproject.toml  requirements.txt
doc/: .gitignore  conf.py  index.md
hog/: __init__.py  approximation_functions.py  ast.py  blending.py  code_generation.py  cpp_printing.py  cse.py  dof_symbol.py  element_geometry.py  exception.py  external_functions.py  fem_helpers.py  forms.py  forms_boundary.py  forms_facets.py  forms_facets_vectorial.py  forms_new.py  forms_vectorial.py  function_space.py  hyteg_code_generation.py  hyteg_form_template.py  integrand.py  logger.py  manifold_forms.py  manifold_helpers.py  math_helpers.py  multi_assignment.py  printer.py  symbolizer.py  sympy_extensions.py
hog/operator_generation/: __init__.py  function_space_impls.py  indexing.py  kernel_types.py  loop_strategies.py  operators.py  optimizer.py  pystencils_extensions.py  types.py
hog/operator_generation/function_space_implementations/: __init__.py  function_space_impl_base.py  function_space_impl_factory.py  n1e1_space_impl.py  p0_space_impl.py  p1_space_impl.py  p2_plus_bubble_space_impl.py  p2_space_impl.py
hog/quadrature/: __init__.py  quad_loop.py  quadrature.py  tabulation.py
hog/recipes/: __init__.py  common.py
hog/recipes/integrands/: __init__.py
hog/recipes/integrands/boundary/: freeslip_nitsche_divergence.py  freeslip_nitsche_gradient.py  freeslip_nitsche_momentum.py  mass.py
hog/recipes/integrands/volume/: adiabatic_heating.py  advection.py  diffusion.py  diffusion_affine.py  diffusion_inv_rho.py  div_k_grad.py  div_k_grad_affine.py  divdiv.py  divergence.py  epsilon.py  epsilon_affine.py  frozen_velocity.py  full_stokes.py  full_stokes_frank_kamenetskii_type1.py  grad_rho_rho_divergence.py  gradient.py  k_mass.py  mass.py  pspg.py  rho_g_mass.py  rotation.py  shear_heating.py  shear_heating_frank_kamenetskii_type1.py  supg_adiabatic_heating.py  supg_advection.py  supg_diffusion.py  supg_mass.py  supg_shear_heating.py  supg_shear_heating_frank_kamenetskii_type1.py  zero.py
hog_tests/: test_cpp_printing.py  test_diffusion.py  test_forms_new.py  test_function_spaces.py  test_polynomial_evaluation.py  test_pspg.py  test_quadrature.py
hog_tests/operator_generation/: test_boundary_loop.py  test_indexing.py  test_opgen_smoke.py
hyteg_integration_tests/: .gitignore  CMakeLists.txt  README.md
hyteg_integration_tests/src/: BoundaryMassTest.cpp  CMakeLists.txt  CurlCurl.cpp  CurlCurlPlusMass.cpp  DiffusionP1.cpp  DiffusionP1Annulus.cpp  DiffusionP1IcosahedralShell.cpp  DiffusionP1Vector.cpp  DiffusionP2.cpp  Div.cpp  DivKGrad.cpp  DivT.cpp  Epsilon.cpp  EpsilonVector.cpp  EpsilonVectorAnnulus.cpp  FullStokes.cpp  OperatorGenerationTest.hpp  SUPGDiffusionAnnulusTest.cpp  SUPGDiffusionTest.cpp
